changes in task-item component

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,1 @@
-<app-task-item *ngFor="let task of tasks" [taskitem]="task"> </app-task-item>
+<app-task-item *ngFor="let task of tasks" [taskItem]="task"> </app-task-item>
