--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,7 @@
 <div class="task">
-  <h3>{{ taskItem.text }}</h3>
+  <h3>
+    {{ taskItem.text }}
+    <fa-icon [icon]="faTimes" [ngStyle]="{ color: 'red' }"></fa-icon>
+  </h3>
   <p>{{ taskItem.day }}</p>
 </div>
