--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,7 +1,11 @@
 <div class="task">
   <h3>
     {{ taskItem.text }}
-    <fa-icon [icon]="faTimes" [ngStyle]="{ color: 'red' }"></fa-icon>
+    <fa-icon
+      [icon]="faTimes"
+      [ngStyle]="{ color: 'red' }"
+      (click)="onClick()"
+    ></fa-icon>
   </h3>
   <p>{{ taskItem.day }}</p>
 </div>
