refactor onDelete functionality

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,6 +1,6 @@
 <app-task-item
   *ngFor="let task of tasks"
   [taskItem]="task"
-  (btnClick)="onDelete(task)"
+  (onDeleteTask)="deleteTask(task)"
 >
 </app-task-item>
