--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -4,7 +4,7 @@
     <fa-icon
       [icon]="faTimes"
       [ngStyle]="{ color: 'red' }"
-      (click)="onClick()"
+      (click)="onDelete()"
     ></fa-icon>
   </h3>
   <p>{{ taskItem.day }}</p>
