implemented the task reminder toggle

--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,8 @@
-<div class="task">
+<div
+  [ngClass]="{ reminder: taskItem.reminder }"
+  class="task"
+  (doubleClick)="onToggle(task)"
+>
   <h3>
     {{ taskItem.text }}
     <fa-icon
