--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,7 +1,7 @@
 <div
   [ngClass]="{ reminder: taskItem.reminder }"
   class="task"
-  (doubleClick)="onToggle(task)"
+  (dblclick)="onToggle()"
 >
   <h3>
     {{ taskItem.text }}
