--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <p>Copyright &copy; 2023</p>
   <a *ngIf="hasRoute('/')" routerLink="/about">About</a>
   <a *ngIf="hasRoute('/about')" routerLink="/">Home</a>
-  <div class="box">
+  <div class="social-box">
     <div class="socials">
       <a href="#">
         <fa-icon [icon]="faFacebook" [ngStyle]="{ color: 'blue' }"></fa-icon>
