--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -30,3 +30,10 @@ footer {
   cursor: pointer;
   transform: scale(1.2);
 }
+
+.footer-btn {
+  text-decoration: underline;
+  color: royalblue;
+  cursor: pointer;
+  font-weight: 500;
+}
