updated the social links

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,16 +15,19 @@
   >
   <div class="social-box">
     <div class="socials">
-      <a href="#">
-        <fa-icon [icon]="faFacebook" [ngStyle]="{ color: 'blue' }"></fa-icon>
+      <a href="https://twitter.com/imhemantchaubey">
+        <fa-icon
+          [icon]="faTwitter"
+          [ngStyle]="{ color: 'royalblue' }"
+        ></fa-icon>
       </a>
-      <a href="#">
-        <fa-icon [icon]="faTwitter" [ngStyle]="{ color: 'blue' }"></fa-icon>
+      <a href="https://github.com/imhemantchaubey">
+        <fa-icon [icon]="faGithub" [ngStyle]="{ color: 'black' }"></fa-icon>
       </a>
-      <a href="#">
+      <a href="https://linkedin.com/in/imhemantchaubey">
         <fa-icon [icon]="faLinkedin" [ngStyle]="{ color: 'blue' }"></fa-icon>
       </a>
-      <a href="#">
+      <a href="https://instagram.com/imhemantchaubey">
         <fa-icon [icon]="faInstagram" [ngStyle]="{ color: 'red' }"></fa-icon>
       </a>
     </div>
