target for the socials specified

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,19 +15,19 @@
   >
   <div class="social-box">
     <div class="socials">
-      <a href="https://twitter.com/imhemantchaubey">
+      <a href="https://twitter.com/imhemantchaubey" target="_blank">
         <fa-icon
           [icon]="faTwitter"
           [ngStyle]="{ color: 'royalblue' }"
         ></fa-icon>
       </a>
-      <a href="https://github.com/imhemantchaubey">
+      <a href="https://github.com/imhemantchaubey" target="_blank">
         <fa-icon [icon]="faGithub" [ngStyle]="{ color: 'black' }"></fa-icon>
       </a>
-      <a href="https://linkedin.com/in/imhemantchaubey">
+      <a href="https://linkedin.com/in/imhemantchaubey" target="_blank">
         <fa-icon [icon]="faLinkedin" [ngStyle]="{ color: 'blue' }"></fa-icon>
       </a>
-      <a href="https://instagram.com/imhemantchaubey">
+      <a href="https://instagram.com/imhemantchaubey" target="_blank">
         <fa-icon [icon]="faInstagram" [ngStyle]="{ color: 'red' }"></fa-icon>
       </a>
     </div>
